// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="projects-list"
>
  <ProjectCard
    key="foo"
    project={
      Object {
        "key": "foo",
        "name": "Foo",
      }
    }
    type="overall"
  />
  <ProjectCard
    key="bar"
    project={
      Object {
        "key": "bar",
        "name": "Bar",
      }
    }
    type="overall"
  />
</div>
`;

exports[`renders different types of "no projects" 1`] = `
<div
  className="projects-list"
>
  <EmptyInstance />
</div>
`;

exports[`renders different types of "no projects" 2`] = `
<div
  className="projects-list"
>
  <EmptySearch />
</div>
`;

exports[`renders different types of "no projects" 3`] = `
<div
  className="projects-list"
>
  <Connect(NoFavoriteProjects) />
</div>
`;
